--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pooja Belaramani</title>
+    <link rel="shortcut icon" href="svg.png" type="image/x-icon">
   </head>
   <body data-theme="dark">
     <div id="root"></div>
